tests/invalid/undeclared_in_list.alu
function () do
begin
int a = 1;
list nums = [a, c];
end
test
